lab/istio/examples/traffic-management/egress-tls-origination/istio-objects-rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: turkey-rabbitmq
spec:
  externalName: turkey.rmq.cloudamqp.com
  type: ExternalName
