lab/istio/examples/traffic-management/egress-tls-origination/istio-objects-rabbitmq/destination-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: turkey-rabbit-mq
spec:
  host: turkey.rmq.cloudamqp.com
  subsets:
  - name: tls-origination
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: turkey-rabbit-mq-local
spec:
  host: turkey-rabbitmq.default.svc.cluster.local
  subsets:
  - name: tls-origination
    trafficPolicy:
      loadBalancer:
        simple: PASSTHROUGH
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          sni: turkey.rmq.cloudamqp.com
